ligolang/src/test/contracts/negative/deep_pattern_matching/pm_fail15.mligo

type parameter =
  Increment of (int * int * int)
| Reset

let main (action : parameter) : int =
  match action with
  | Increment (n, m) -> 0
  | Reset            -> 0
